Rapidly resizing the demo-pane on a Codepen demo makes the animation stop until you switch back to the tab (Best STR in comment #5)
Categories
(Core :: Graphics: Canvas2D, defect)
Tracking
()
People
(Reporter: mayankleoboy1, Assigned: sotaro)
References
(Blocks 1 open bug, Regression, )
Details
(Keywords: regression)
Attachments
(4 files, 1 obsolete file)
Enable gpu-canvas
Open https://lab.hakim.se/sphere/ in two foreground windows
Drag-and-resize one of the Windows horizontally (such that the other window/demo will resize) BUT keep on holding the mouse for maybe 10s.
AR: The demo in the resized window will become black and wont render at all. It will not fix even if you reload the window.
ER: Not so
Profile with graphics preset logging: https://share.firefox.dev/3zCcOr8
In about:support, you get these gfxlogs :
(#0) GP+[GFX1-]: RemoteTexture ready timeout
(#1) GP+[GFX1-]: RemoteTexture ready timeout
The STR are quite similar to bug 1899231
| Reporter | ||
Comment 1•1 year ago
|
||
| Reporter | ||
Comment 2•1 year ago
|
||
Doesnt repro if I set gfx.canvas.remote.use-canvas-translator-event = False.
Tentatively marking regressed by on bug 1899231
| Reporter | ||
Comment 3•1 year ago
|
||
Comment 4•1 year ago
|
||
:sotaro, since you are the author of the regressor, bug 1899231, could you take a look? Also, could you set the severity field?
For more information, please visit BugBot documentation.
| Reporter | ||
Comment 5•1 year ago
•
|
||
Another STR is:
Go to https://codepen.io/Mertl/pen/vYPXMao
Once the demo starts, quickly and continuously keep on resizing the demo-pane horizontally making sure to move the slider maximum possible each side.
After 5s-10s, the demo will stop animating.
Profile with graphics logging preset: https://share.firefox.dev/3TMOc5Z
This STR is very similar to https://bugzilla.mozilla.org/show_bug.cgi?id=1898650#c6
| Reporter | ||
Comment 6•1 year ago
•
|
||
Even simpler STR:
- enable gpu-canvas.
- go to https://lab.hakim.se/sphere/
- drag the tab to make a new window.
- Rapidly resize the window diagonally.
AR: After 5s-10s, the demo will stop painting nad wont resize.
Comment 7•1 year ago
|
||
Set release status flags based on info from the regressing bug 1899231
Updated•1 year ago
|
Updated•1 year ago
|
| Reporter | ||
Comment 8•1 year ago
|
||
Slightly retitling the bug to match with the best STR of comment #5.
| Reporter | ||
Updated•1 year ago
|
| Reporter | ||
Comment 9•1 year ago
|
||
Comment 10•1 year ago
|
||
Has this issue been fixed by the patch that landed on Bug 1899231 some time ago?
| Reporter | ||
Updated•1 year ago
|
Comment 12•1 year ago
|
||
(In reply to Ashley Hale [:ahale] from comment #10)
Has this issue been fixed by the patch that landed on Bug 1899231 some time ago?
Are there any updates since this was triaged? Bug 1910138 enabled this for Fx133.
Wondering about expectations for a fix in time for Fx133. Next week is the final week of beta for Fx133.
Comment 13•1 year ago
|
||
I don't know that Sotaro has the opportunity to investigate this in time, so I am marking this as fix-optional as it seems like something that shouldn't be a release blocker.
| Assignee | ||
Updated•1 year ago
|
| Assignee | ||
Updated•1 year ago
|
| Assignee | ||
Comment 14•1 year ago
|
||
The problem seemed to happen when pending CanvasTranslator events were cleared in CanvasTranslator::ActorDestroy().
It happened when CanvasChild was destroyed in CanvasManagerChild::EndCanvasTransaction().
| Assignee | ||
Comment 15•1 year ago
|
||
Updated•1 year ago
|
Updated•1 year ago
|
| Assignee | ||
Comment 16•1 year ago
|
||
The problem was triggered by destroying CanvasChild in CanvasManagerChild::EndCanvasTransaction() by mCanvasChild->ShouldBeCleanedUp() == true.
Then if mCanvasChild->ShouldBeCleanedUp() == false during handling Texture in CanvasTranslator. The problem seemed not happen. It could be possible, by holding RefPtr<CanvasDrawEventRecorder>.
| Assignee | ||
Comment 17•1 year ago
|
||
Updated•1 year ago
|
Updated•1 year ago
|
Updated•1 year ago
|
Comment 18•1 year ago
|
||
Comment 19•1 year ago
|
||
| bugherder | ||
| Reporter | ||
Comment 20•1 year ago
|
||
This is fixed for me in the latest Nightly.
Comment 21•1 year ago
|
||
The patch landed in nightly and beta is affected.
:sotaro, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox133towontfix.
For more information, please visit BugBot documentation.
| Assignee | ||
Updated•1 year ago
|
Updated•1 year ago
|
Comment 22•1 year ago
|
||
I was able to reproduce the issue on Windows 10 x64 using Firefox build 131.0a1 (2024-09-27).
Verified as fixed on Windows 10 x64 using Firefox build 136.0a1 and 135.0b9.
Description
•