Bug 1921586 - Do not destroy CanvasChild when texture is alive in CanvasTranslator r=lsalzman

When chainging CanvasChild::ShouldBeCleanedUp() returns false, CanvasManagerChild::EndCanvasTransaction() does not destroy CanvasManagerChild::mCanvasChild.

By using NotifyTextureDestruction message, CanvasChild could know which texture in CanvasTranslator has been destroyed.

Differential Revision: https://phabricator.services.mozilla.com/D228936